examples/Proxy_mutua_autenticazione_apigw-ocp/template.yaml
apiVersion: template.openshift.io/v1
kind: Template
metadata:
  name: nginx-secureproxy
  labels:
    app: secureproxy
    name: secureproxy
  annotations:
    "openshift.io/display-name": secureproxy
    description: |
      An Nginx solution for an OpenShift route securization - Throttling, authentication features for openshift ingress route. This is a tech preview feature.
    iconClass: icon-cogs
    tags: "secureproxy, nginx"
parameters:
- description: The location of the Nginx image
  name: IMAGE_NGINX
  value: sdpsvalmbf.rete.testposte:5000/globals/nginx-116-rhel7
- description: Rotta esterna da impostare per l'nginx
  name: ROTTA
  required: true
- description: Porta del service da utilizzare
  name: PORTASERVICE
  required: true
- description: Tipo di terminazione ssl della rotta
  name: TLS_TERMINATION
  required: true


objects:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: null
    generation: 1
    labels:
      app: secureproxy
    name: secureproxy
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      deploymentconfig: secureproxy
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: secureproxy
          deploymentconfig: secureproxy
      spec:
        containers:
        - image: ${IMAGE_NGINX}
          imagePullPolicy: IfNotPresent
          name: secureproxy
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /opt/app-root/etc/nginx.d/
            name: nginxconf
            readOnly: true
          - mountPath: /etc/nginx/certs
            name: certificatissl
            readOnly: true
          - mountPath: /etc/nginx/ssl
            name: clientcrt
            readOnly: true
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: nginx.conf
          name: nginxconf
        - name: certificatissl
          secret:
            defaultMode: 420
            secretName: certificatissl
        - name: clientcrt
          secret:
            defaultMode: 420
            secretName: client.crt.Secret
    test: false
    triggers:
    - type: ConfigChange

- apiVersion: v1
  data:
    nginx.conf: |
      [...]
  kind: ConfigMap
  metadata:
    creationTimestamp: null
    name: nginx.conf

- apiVersion: v1
  data:
    client.crt: inserire certificato client
  kind: Secret
  metadata:
    creationTimestamp: null
    name: client.crt.Secret
  type: Opaque

- apiVersion: v1
  data:
    certificato.crt: inserire il certificato
    certificato.key: inserire la chiave privata
  kind: Secret
  metadata:
    creationTimestamp: null
    name: certificati.ssl.Secret
  type: Opaque  

-apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: secureproxy
    name: secureproxy
  spec:
    ports:
      - name: 8080-tcp
        port: 8080
        protocol: TCP
        targetPort: 8080
      - name: 8443-tcp
        port: 8443
        protocol: TCP
        targetPort: 8443
    selector:
      deploymentconfig: secureproxy
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}

- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: secureproxy
    name: secureproxy
  spec:
    host: ${ROTTA}
    port:
      targetPort: ${PORTASERVICE}-tcp
    tls:
      termination: ${TLS_TERMINATION}
    to:
      kind: Service
      name: secureproxy
      weight: 100
    wildcardPolicy: None
