examples/Proxy_mutua_autenticazione_apigw-ocp/network_policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-proxyapigw-namespace
  namespace: offloading-mainframe-richieste-informative
  generation: 1
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: apigw-proxy-mutua
  policyTypes:
    - Ingress
